# Receiptly

./: Caddyfile  DEPLOYMENT_INSTRUCTIONS.md  DOCKER_DEPLOYMENT.md  INTEGRATION_STATUS.md  TRACKER_SETUP.md  VIEW_DETAILS_FIX.md  ocr_script.py  receiptly-backend.service  req.txt  requirements.txt  test-connection.js
receiptly-react-backend/: .dockerignore  .env.docker  .env.example  .env.production  .gitignore  Caddyfile.example  Dockerfile  README-DOCKER.md  README.md  docker-compose.yml  init.sql  main.py  nginx.conf  pyproject.toml  requirements.txt  run-with-local-env.sh  setup.sh  start.sh  test-api-simple.py  test-db-connection.py  test_api.py
receiptly-react-backend/app/api/routes/: auth.py  items.py  receipts.py  transactions.py
receiptly-react-backend/app/core/: auth.py  config.py  database.py
receiptly-react-backend/app/schemas/: items.py  receipts.py  transactions.py  users.py
receiptly-react-backend/prisma/: schema.prisma
receiptly-react-backend/prisma/migrations/20250926201540_init/: migration.sql
receiptly-react-backend/prisma/migrations/20250926204035_update_receipt_schema/: migration.sql
receiptly-react-backend/prisma/migrations/20250926205727_remove_payment_and_taxes/: migration.sql
receiptly-react-backend/prisma/migrations/20250926212405_add_receipt_image_storage/: migration.sql
receiptly-react-backend/prisma/migrations/20250926213244_remove_subtotal_field/: migration.sql
receiptly-react-backend/prisma/migrations/20251030161035_add_receipt_transaction_link/: migration.sql
receiptly-react-frontend/: .env  .env.example  COMPARISON.md  (+14 more)
(+19 files in other folders)
