[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receiptly-backend"
version = "0.1.0"
description = "FastAPI backend for Receiptly receipt management application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "prisma==0.11.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "httpx==0.25.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"